@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v8r7-pre2
+  {
+    Modules = LHCbDIRAC:v8r7-pre2, LHCbWebDIRAC:v4r2p6
+    Depends = DIRAC:v6r17p15
+    LcgVer = 2017-01-27
+  }
+
   v8r7-pre1
   {
     Modules = LHCbDIRAC:v8r7-pre1, LHCbWebDIRAC:v4r2p6
