@@ -1,3 +1,7 @@
+[v8r7-pre2]
+Use DIRAC v6r17p15
+* change LCG version
+
 [v8r7-pre1]
 Use DIRAC v6r17p15
 
